--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ p {
   background-position: center;
 }
 
+/* image helpers */
 .float-left {
   float: left;
   margin-right: 25px;
@@ -69,13 +70,32 @@ p {
   float: right;
   margin-left: 25px;
 }
-
+/* primary content start */
 .content {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
 
+.info-snippet {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+}
+
+.info-snippet img {
+  max-height: 200px;
+}
+
+.info-snippet h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+
+/* aside content start */
 .benefits {
   margin-right: 20px;
   padding: 20px;
@@ -102,25 +122,7 @@ p {
   margin: 10px auto;
   max-width: 150px;
 }
-
-.info-snippet {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.info-snippet img {
-  max-height: 200px;
-}
-
-.info-snippet h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
+/* footer start */
 .footer {
   padding: 30px;
   clear: both;
